Bug 1288341 - Don't overlap layout-expander in RTL Locales. r=ntim
MozReview-Commit-ID: Gp4SeTZctIT

UltraBlame original commit: c92d40e691765ebe7007a36749c673f89e83f364

--- a/devtools/client/themes/computed.css
+++ b/devtools/client/themes/computed.css
@@ -394,8 +394,6 @@ view
 padding
 :
 2px
-0
-2px
 17px
 ;
 display
@@ -720,12 +718,36 @@ hidden
 ;
 margin
 -
-left
+inline
+-
+start
 :
 -
 12px
 !
 important
+;
+}
+.
+expander
+:
+-
+moz
+-
+locale
+-
+dir
+(
+rtl
+)
+{
+transform
+:
+scaleX
+(
+-
+1
+)
 ;
 }
 .
